--- a/PcBuilderWeb/Views/Shared/_LoginPartial.cshtml
+++ b/PcBuilderWeb/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
 		var signedInUser = await UserManager.GetUserAsync(User);
 
 		<li class="nav-item">
-			<a class="nav-link" asp-controller="User" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" title="Manage">Hello @signedInUser.FirstName</a>
+			<a class="nav-link" asp-controller="Identity" asp-action="/Account/Manage/Index" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" title="Manage">Hello @signedInUser.FirstName</a>
 		</li>
 		<li class="nav-item">
 			<form class="form-inline" asp-controller="User" asp-action="Logout" method="post">
