--- a/PcBuilderWeb/Views/Shared/_Layout.cshtml
+++ b/PcBuilderWeb/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
 		                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">My Cart</a>
 	                        </li>
                         }
+		                @if(User.IsInRole("ADMIN"))
+		                {
+			                <li class="nav-item">
+				                <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+			                </li>
+		                }
 	                </ul>
 	                <partial name="_LoginPartial" />
                 </div>
